[package]
name = "arduino"
version = "0.1.0"
authors = ["Alan Randon <alan.randon@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "arduino"
test = false
bench = false

[dependencies]
panic-halt = "0.2"
ufmt = "0.2"
nb = "1.1"
embedded-hal = "1.0"
avr-device = { version = "0.5", features = ["atmega328p"] }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"
features = ["arduino-uno"]

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
